# savis

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Makefile  README.md  compose.prod.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  release-please-config.json
savis-executor/: .dockerignore  Dockerfile  README.md  pyproject.toml
savis-executor/alembic/: env.py  script.py.mako
savis-executor/alembic/versions/: 202606130001_initial_executor_schema.py  202606190001_active_refresh_task_uniqueness.py  __init__.py
savis-executor/app/: __init__.py  config.py  container.py  main.py
savis-executor/app/adapters/: __init__.py
savis-executor/app/adapters/api/: health.py  routes.py  schemas.py
savis-executor/app/adapters/celery/: __init__.py  celery_app.py  (+2 more)
savis-executor/app/core/: models.py  ports.py  use_case_offers.py  use_case_savis_tasks.py
savis-executor/deploy/systemd/: savis-chrome-cdp-proxy.service
savis-executor/tests/: __init__.py
savis-executor/tests/core/: test_use_case_offers.py  test_use_case_savis_tasks.py
savis-scraper/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
savis-scraper/app/: __init__.py  config.py  container.py  main.py
savis-scraper/app/adapters/: __init__.py  java_api_publisher.py
savis-scraper/app/api/: routes.py
savis-scraper/app/config/: celery_app.py  logging.py  settings.py
savis-scraper/app/core/: __init__.py  cleanup_scraping_tasks_use_case.py  enqueue_scraping_use_case.py  execute_scraping_use_case.py  models.py  ports.py  use_case_enqueue_scraping.py  use_case_execute_scraping.py  use_case_offers.py  use_case_savis_tasks.py  use_case_scraping_tasks.py  use_case_track_offers.py
savis-scraper/app/domain/: models.py
savis-scraper/app/schemas/: offer.py  scraping_task.py
savis-scraper/app/scrapers/: engine.py
savis-scraper/app/webhook/: java_client.py
savis-scraper/app/workers/: __init__.py  scraping_tasks.py
savis-scraper/tests/: __init__.py
savis-scraper/tests/core/: test_cleanup_scraping_tasks_use_case.py  test_enqueue_scraping_use_case.py  test_execute_scraping_use_case.py  test_use_case_enqueue_scraping.py  test_use_case_execute_scraping.py  test_use_case_offers.py  test_use_case_savis_tasks.py  test_use_case_scraping_tasks.py  test_use_case_track_offers.py
(+543 files in other folders)
