[project]
name = "savis-executor"
version = "0.1.0"
description = "The Python execution service of SAVIS"
readme = "README.md"
requires-python = ">=3.14.4"
dependencies = [
    "celery>=5.6.3",
    "fastapi[standard]>=0.136.1",
    "httpx[http2]>=0.28.1",
    "playwright==1.59.0",
    "pydantic>=2.13.3",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.0",
    "pika>=1.4.0",
    "psycopg[binary]>=3.3.2",
    "sqlalchemy>=2.0.45",
]

[tool.fastapi]
entrypoint = "app.main:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.12",
]

[tool.ruff.lint]
extend-select = ["ALL"]
