[project]
name = "savis-executor"
version = "0.1.0"
description = "The Python execution service of SAVIS"
readme = "README.md"
requires-python = ">=3.14.4"
dependencies = [
    "alembic>=1.16.5",
    "celery>=5.6.3",
    "fastapi[standard]>=0.136.1",
    "httpx[http2]>=0.28.1",
    "playwright==1.60.0",
    "pydantic>=2.13.4",
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "pika>=1.4.1",
    "psycopg[binary]>=3.3.2",
    "sqlalchemy>=2.0.51",
]

[tool.fastapi]
entrypoint = "app.main:app"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.17",
]

[tool.ruff.lint]
extend-select = ["ALL"]
